# chronicle

./: .gitignore  AGENTS.md  README.md  TODO.md  chronicle-windows-complete-plan.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: architecture.md
scripts/: benchmark.ps1  release-smoke.ps1  windows-capture-acceptance.ps1  windows-runtime-smoke.ps1
src/: diagnostics_panel.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: asynchronous_processing_queue.rs  capture.rs  commands.rs  db.rs  embedding_provider.rs  filesystem_activity_capture.rs  lib.rs  local_model_provider.rs  local_semantic_processing.rs  local_sqlite_event_database.rs  main.rs  queue.rs  tauri_application_commands.rs  transient_screenshot_capture.rs  windows_active_window_screenshot.rs  windows_activity_capture.rs  windows_graphics_capture_session.rs  windows_input_capture.rs  windows_ui_automation_capture.rs
src-tauri/src/activity_capture/: mod.rs  shared.rs  windows.rs
src-tauri/src/input_capture/: mod.rs  shared.rs  windows.rs
