[package]
name = "chronicle"
version = "0.1.0"
description = "Chronicle local-first computer memory engine"
authors = ["Chronicle"]
edition = "2021"

[lib]
name = "chronicle_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5", features = [] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.61", features = ["Graphics_Capture", "Graphics_DirectX_Direct3D11", "UI", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_Com", "Win32_System_Ole", "Win32_UI_Accessibility", "Win32_UI_Shell", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_System_WinRT_Direct3D11"] }
